[package]
name = "lettre-cat"
version = "0.1.0"
edition = "2024"
description = "Email sending built on comp-cat-rs: composable, resource-safe, lazy effects over lettre"
license = "MIT"
keywords = ["email", "smtp", "effects", "category-theory", "functional"]
categories = ["email", "rust-patterns"]

[dependencies]
comp-cat-rs = "0.2"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"] }

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = "warn"
needless_pass_by_value = "warn"
manual_map = "warn"
